# cesium-terrain-builder

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  gdal2terrain.cpp  terrain-info.cpp  terrain-tile-bounds.cpp  terrain.cpp  terrain2tiff.cpp  test.c  test.cpp
data/: smallterrain-blank.terrain
doc/: Doxyfile  README.md
docker/: Dockerfile  Makefile  README.md  build.sh  install-ctb.sh
src/: BoundingSphere.hpp  Bounds.hpp  CMakeLists.txt  CRSBoundsIterator.hpp  CTBException.hpp  CTBFileOutputStream.cpp  CTBFileOutputStream.hpp  CTBFileTileSerializer.cpp  CTBFileTileSerializer.hpp  CTBOutputStream.hpp  CTBZOutputStream.cpp  CTBZOutputStream.hpp  Coordinate.hpp  Coordinate3D.hpp  GDALDatasetReader.cpp  GDALDatasetReader.hpp  GDALSerializer.hpp  GDALTile.cpp  GDALTile.hpp  GDALTiler.cpp  GDALTiler.hpp  GlobalGeodetic.cpp  GlobalGeodetic.hpp  GlobalMercator.cpp  GlobalMercator.hpp  Grid.hpp  GridIterator.hpp  HeightFieldChunker.hpp  Mesh.hpp  MeshIterator.hpp  MeshSerializer.hpp  MeshTile.cpp  MeshTile.hpp  MeshTiler.cpp  MeshTiler.hpp  RasterHeightsCache.hpp  RasterIterator.cpp  RasterIterator.hpp  RasterTiler.hpp  TerrainException.hpp  (+21 more)
tools/: CMakeLists.txt  ctb-export.cpp  ctb-extents.cpp  ctb-info.cpp  ctb-tile.cpp  gdal2terrain.cpp  output_mbtiles.hpp  terrain-build.cpp  terrain-export.cpp  terrain-extents.cpp  terrain-info.cpp  terrain-tile-bounds.cpp  terrain2tiff.cpp
